--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <title>.</title>
     </head>
     <body>
-        <h1>WIP (Will sumbit when I return to Kota)</h1>
+        <h1>WIP </h1>
     </body>
 </html>
